MAINT-32872: Fix productTypeName mapping (#487)
Co-authored-by: Daniel Chiuratto Seabra <danielsea@backbase.com>